# Computer-Graphics-Final-Project

./: README.md
Final_Project_Main/: CMakeLists.txt
Final_Project_Main/main/: Final_Project.cpp  box.frag  lab2_skybox.h  lab4_skeleton.cpp  light.frag  light.vert  skybox.vert
__MACOSX/lab2/lab2/: ._box.frag
lab2/: CMakeLists.txt
lab2/lab2/: box.frag  box.vert  lab2_building.cpp  lab2_skybox.cpp  lab2_skybox.h  lab4_skeleton.cpp
lab2/lab2/render/: shader.cpp
lab2/lab2/shader/: bot.frag  bot.vert
